Updated CsiContactTypes swagger and code
