# Api_Site/api/routes/CsiContactTypesRoutes.js
@@ -4,7 +4,7 @@ module.exports = function(webserver) {
     webserver.route('/MailEnhancement/api/v1/CsiContactTypes')
         .post(controller.create_a_CsiContactType)
         .get(controller.get_all_CsiContactTypes);
-    webserver.route('/MailEnhancement/api/v1/CsiContactTypes/:CsiContactTypeId')
+    webserver.route('/MailEnhancement/api/v1/CsiContactTypes/:Id')
         .get(controller.read_a_CsiContactType)
         .put(controller.update_a_CsiContactType)
         .delete(controller.delete_a_CsiContactType);
