# Api_Site/swagger.json
@@ -31,6 +31,14 @@
 				"description": "Find out more",
 				"url": "http://localhost:4010/api/help"
 			}
+		},
+		{
+			"name": "CsiContactTypes",
+			"description": "CSI Contact types.",
+			"externalDocs": {
+				"description": "Find out more",
+				"url": "http://localhost:4010/api/help"
+			}
 		}
 		
 	],
@@ -443,7 +451,135 @@
 					}
 				}
 			}
+		},
+		"/CsiContactTypes": {
+			"get": {
+				"tags": [
+					"CsiContactTypes"
+				],
+				"description": "Get all the csi contact types from the database.",
+				"parameters": [],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			},
+
+			"post": {
+				"tags": [
+					"CsiContactTypes"
+				],
+				"description": "Create a new csi contact type on the database.",
+				"parameters": [
+					{
+						"in": "body",
+						"name": "body",
+						"description": "csi contact type that needs to be added to the system",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/CsiContactTypesModel"
+						}
+					}
+				],
+				"responses": {
+					"201": {
+						"description": "Created"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			}
+
+		},
+		"/CsiContactTypes/{Id}": {
+			"get": {
+				"tags": [
+					"CsiContactTypes"
+				],
+				"description": "Get the csi contact type from the database by the id.",
+				"parameters": [
+					{
+					"name": "Id",
+					"in": "path",
+					"description": "Id of csi contact type that needs to be fetched",
+					"required": true,
+					"type": "integer",
+					"format": "int32"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			},
+			"put":{
+				"tags": [
+					"CsiContactTypes"
+				],
+				"description": "Update a csi contact type record on the database.",
+				"parameters": [
+					{
+					"name": "Id",
+					"in": "path",
+					"description": "Id of csi contact type that needs to be edited",
+					"required": true,
+					"type": "integer",
+					"format": "int32"
+					},
+					{
+						"in": "body",
+						"name": "body",
+						"description": "csi contact type that needs to be edited",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/CsiContactTypesModel"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			},
+			"delete": {
+				"tags": [
+					"CsiContactTypes"
+				],
+				"description": "Delete a csi contact type record from the database.",
+				"parameters": [
+					{
+					"name": "Id",
+					"in": "path",
+					"description": "Id of csi contact type that needs to be removed",
+					"required": true,
+					"type": "integer",
+					"format": "int32"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			}
 		}
+		
 		
 	
 	
@@ -534,7 +670,29 @@
 					"example": false
 				}
 			}
+		},
+		"CsiContactTypesModel": {
+			"type": "object",
+			"required": [
+				"name",
+				"description"
+			],
+			"properties": {
+				"name": {
+					"type": "string",
+					"example": "name"
+				},
+				"description": {
+					"type": "string",
+					"example": "description"
+				},
+				"inActive": {
+					"type": "bool",
+					"example": false
+				}
+			}
 		}
+	
 	
 	
 	
